# ferris-spinner

./: Cargo.toml  README.md
assets/: ferris.glb
src/: main.rs
