[package]
name = "ferris-spinner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.18.1"
devcaders = "0.2.0"

[dependencies.bevy]
version = "0.10.0"

[target.'cfg(debug_assertions)'.dependencies.bevy]
features = ["dynamic_linking"]