[package]
name = "ferris-spinner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.18.1"
bevy_hanabi = { version = "0.8.0", git = "https://github.com/djeedai/bevy_hanabi" }
devcaders = "0.6.0"

[dependencies.bevy]
features = ["bevy_audio"]
version = "0.12.0"

[features]
default = ["bevy/dynamic_linking"]
devcade = []
